assets/css/settings-styles.css
/* ... */
#wpo-wcpdf-preview-wrapper .slider.slide-left {
	text-align: right;
	padding-right: 10px;
	border-right: 1px solid #ccc;
}

#wpo-wcpdf-preview-wrapper .slider.slide-right {
	text-align: left;
	padding-left: 10px;
	border-left: 1px solid #ccc;
	display: none;
}

#wpo-wcpdf-preview-wrapper .slider:hover {
	color: #222;
}

#wpo-wcpdf-preview-wrapper .slider.slide-left:after {
	content: 'Preview';
	position: absolute;
	right: 2em;
	font-size: 1.4em;
	display: none;
}

#wpo-wcpdf-preview-wrapper .slider.slide-right:after {
	content: 'Settings';
	position: absolute;
	left: 2em;
	font-size: 1.4em;
	display: none;
}

#wpo-wcpdf-preview-wrapper[data-preview-states="1"] .gutter {
	display: none;
}

#wpo-wcpdf-preview-wrapper[data-preview-states="3"][data-preview-state="sidebar"]  .gutter {
	height: 100vh;
}

#wpo-wcpdf-preview-wrapper[data-preview-state="full"] .slide-right:after {
	display: inline-block;
}

#wpo-wcpdf-preview-wrapper[data-preview-state="closed"] .slide-left:after {
	display: inline-block;
}

#wpo-wcpdf-preview-wrapper.static .preview-document,
#wpo-wcpdf-preview-wrapper.static .gutter {
	position: static!important;
}

#wpo-wcpdf-preview-wrapper.static .sidebar {
	height: 170vh!important;
	overflow: hidden;
}

#wpo-wcpdf-preview-wrapper input.readonly,
#wpo-wcpdf-preview-wrapper input[readonly],
#wpo-wcpdf-preview-wrapper textarea.readonly,
#wpo-wcpdf-preview-wrapper textarea[readonly] {
	background-color: #f8f8f8;
}

#wpo-wcpdf-preview-wrapper[data-preview-state="sidebar"] .select2.select2-container {
	width: 100%!important;
}

@media screen and (max-width: 1200px) {
	.preview-document .preview > #preview-canvas {
		max-width: 680px;
	}

	.nav-tab-wrapper a.nav-tab {
		padding: 1em 2em;
		margin: 0 0.5em 0.5em 0;
		border: 1px solid #ccc;
		box-sizing: border-box;
		height: 4em;
	}

	.nav-tab-wrapper a.nav-tab.nav-tab-active {
		border: 3px solid #51266b;
	}
}

@media screen and (max-width: 960px) {
	.preview-document .preview > #preview-canvas {
		width: 80vw!important;
	}

	#wpo-wcpdf-preview-wrapper .sidebar > form {
		max-width: 100%;
	}

	#wpo-wcpdf-preview-wrapper[data-preview-state="closed"] .select2.select2-container {
	width: 100%!important;
}

	#wpo-wcpdf-preview-wrapper .sidebar .form-table,
	#wpo-wcpdf-preview-wrapper .sidebar .form-table > tr,
	#wpo-wcpdf-preview-wrapper .sidebar .form-table > tr > th,
	#wpo-wcpdf-preview-wrapper .sidebar .form-table > tr > td,
	#wpo-wcpdf-preview-wrapper .sidebar .form-table > tbody,
	#wpo-wcpdf-preview-wrapper .sidebar .form-table > tbody > tr,
	#wpo-wcpdf-preview-wrapper .sidebar .form-table > tbody > tr > th,
	#wpo-wcpdf-preview-wrapper .sidebar .form-table > tbody > tr > td {
		display: block!important;
		/*width: 100%!important;*/
	}
}

